--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
 <body>
 
   <div class="card">
-    <img src="images/image-product-mobile.jpg" alt="perfum"
-      srcset="images/image-product-mobile.jpg 300w,
-              images/image-product-desktop.jpg 600w" />
+    <picture>
+      <source 
+        srcset="images/image-product-desktop.jpg"
+        media="(min-width: 450px)" />
+      <img 
+        src="images/image-product-mobile.jpg" 
+        alt="perfum"/>
+    </picture>
           
     <div class="info">
       <h2>
@@ -49,7 +54,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Manuel Alonso Vargas Hernandez</a>.
   </div>
 </body>
 </html>
