--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div>
-    <div class="card">
+    <main class="card">
       <picture>
         <source 
           srcset="images/image-product-desktop.jpg"
@@ -28,9 +28,9 @@
       </picture>
             
       <div class="info">
-        <h2>
+        <h3>
           P E R F U M E
-        </h2>
+        </h3>
         <h1>
           Gabrielle Essence Eau De Parfum
         </h1>
@@ -38,24 +38,24 @@
           A floral, solar and voluptuous interpretation composed by Oliver Polge, Perfumer-Creator for the House of CHANEL
         </p>
         <div class="price">
-          <h1 class="current-price">
+          <h2 class="current-price">
             $149.99 &nbsp;
-          </h1>
-          <h3 class="past-price">
+          </h2>
+          <span class="past-price">
             $169.99
-          </h3>
+          </span>
         </div>
         <button class="btn">
           <img src="images/icon-cart.svg" alt="cart icon" class="icon"/>
           &nbsp; Add to Cart
         </button>
       </div>
-    </div>
+    </main>
     
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Manuel Alonso Vargas Hernandez</a>.
-    </div>
+    </footer>
   </div>
 </body>
 </html>
